--- a/views/inherited_hr_view_hr_job_form.xml
+++ b/views/inherited_hr_view_hr_job_form.xml
@@ -1,22 +1,29 @@
 <?xml version="1.0"?>
 <openerp>
     <data>
-        <!--<record model="ir.ui.view" id="hr_skill_extended_inherits_view_skill_form">-->
-            <!--<field name="name">hr.skill.extended.inherits.view.skill.form</field>-->
-            <!--<field name="model">hr.skill</field>-->
-            <!--<field name="inherit_id" ref="hr_skill.view_skill_form"/>-->
-            <!--<field name="arch" type="xml">-->
-                <!--<xpath expr="//field[@name='active']" position="after">-->
-                    <!--<field name='hr_employee_skill_data_ids'>-->
-                        <!--<tree editable="bottom" default_order="percentage desc">-->
-                            <!--<field name="employee_id"/>-->
-                            <!--<field name="percentage"/>-->
-                            <!--<field name="description"/>-->
-                        <!--</tree>-->
-                    <!--</field>-->
-                <!--</xpath>-->
-            <!--</field>-->
-        <!--</record>-->
+        <record model="ir.ui.view" id="hr_ext_qa_inherits_hr_view_hr_job_form">
+            <field name="name">hr.ext.qa.inherits.hr.view.hr.job.form</field>
+            <field name="model">hr.job</field>
+            <field name="inherit_id" ref="hr.view_hr_job_form"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='user_id']" position="after">
+                    <field name='start_date'/>
+                    <field name='time_to_expire'/>
+                </xpath>
+                <xpath expr="//field[@name='alias_name']" position="after">
+                    <field name='priority'/>
+                </xpath>
+                <xpath expr="//field[@name='no_of_employee']" position="after">
+                    <field name='step_technologies'/>
+                    <field name='requirement'/>
+                    <field name='duties'/>
+                    <field name='phase_proj_prod'/>
+                    <field name='team_size'/>
+                    <field name='remote_allowed'/>
+                    <field name='application_ids'/>
+                </xpath>
+            </field>
+        </record>
         <!--<record id="hr_skills_extended_inherits_view_employee_skill_form" model="ir.ui.view">-->
         <!--<field name="name">hr.skills.extended.inherits.view.empoloyee.skill.form</field>-->
         <!--<field name="model">hr.employee</field>-->
