--- a/views/inherited_hr_recruitment_crm_case_form_view_job.xml
+++ b/views/inherited_hr_recruitment_crm_case_form_view_job.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0"?>
 <openerp>
     <data>
-        <!--<record model="ir.ui.view" id="hr_skill_extended_inherits_view_skill_form">-->
-            <!--<field name="name">hr.skill.extended.inherits.view.skill.form</field>-->
-            <!--<field name="model">hr.skill</field>-->
-            <!--<field name="inherit_id" ref="hr_skill.view_skill_form"/>-->
-            <!--<field name="arch" type="xml">-->
-                <!--<xpath expr="//field[@name='active']" position="after">-->
-                    <!--<field name='hr_employee_skill_data_ids'>-->
-                        <!--<tree editable="bottom" default_order="percentage desc">-->
-                            <!--<field name="employee_id"/>-->
-                            <!--<field name="percentage"/>-->
-                            <!--<field name="description"/>-->
-                        <!--</tree>-->
-                    <!--</field>-->
-                <!--</xpath>-->
-            <!--</field>-->
-        <!--</record>-->
+        <record model="ir.ui.view" id="hr_ext_qa_inherits_hr_recruitment_crm_case_form_view_job">
+            <field name="name">hr.ext.qa.inherits.hr.recruitment.crm.case.form.view.job</field>
+            <field name="model">hr.applicant</field>
+            <field name="inherit_id" ref="hr_recruitment.crm_case_form_view_job"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='type_id']" position="after">
+                    <field name='candidate_level'/>
+                    <field name='candidate_type'/>
+                    <field name='current_salary' widget="monetary"/>
+                    <field name='availability_date' widget="date"/>
+                </xpath>
+                <xpath expr="//field[@name='categ_ids']" position="attributes">
+                    <attribute name="string">Key Skills</attribute>
+                </xpath>
+            </field>
+        </record>
         <!--<record id="hr_skills_extended_inherits_view_employee_skill_form" model="ir.ui.view">-->
         <!--<field name="name">hr.skills.extended.inherits.view.empoloyee.skill.form</field>-->
         <!--<field name="model">hr.employee</field>-->
