--- a/views/inherited_hr_view_hr_job_form.xml
+++ b/views/inherited_hr_view_hr_job_form.xml
@@ -6,37 +6,23 @@
             <field name="model">hr.job</field>
             <field name="inherit_id" ref="hr.view_hr_job_form"/>
             <field name="arch" type="xml">
-                <xpath expr="//field[@name='user_id']" position="after">
-                    <field name='start_date'/>
-                    <field name='time_to_expire'/>
-                </xpath>
-                <xpath expr="//field[@name='alias_name']" position="after">
-                    <field name='priority'/>
-                </xpath>
-                <xpath expr="//field[@name='no_of_employee']" position="after">
-                    <field name='step_technologies'/>
-                    <field name='requirement'/>
-                    <field name='duties'/>
-                    <field name='phase_proj_prod'/>
-                    <field name='team_size'/>
-                    <field name='remote_allowed'/>
-                    <field name='application_ids'/>
+                <!--<xpath expr="//field[@name='user_id']" position="after">-->
+                    <!--<field name='start_date'/>-->
+                    <!--<field name='time_to_expire'/>-->
+                <!--</xpath>-->
+                <!--<xpath expr="//field[@name='alias_name']" position="after">-->
+                    <!--<field name='priority'/>-->
+                <!--</xpath>-->
+                <xpath expr="//field[@name='department_id']" position="after">
+                    <field name='step_technologies' class="oe_inline"/>
+                    <field name='requirement' class="oe_inline"/>
+                    <field name='duties' class="oe_inline"/>
+                    <field name='phase_proj_prod' class="oe_inline"/>
+                    <field name='team_size' class="oe_inline"/>
+                    <field name='remote_allowed' class="oe_inline"/>
+                    <field name='application_ids' class="oe_inline"/>
                 </xpath>
             </field>
         </record>
-        <!--<record id="hr_skills_extended_inherits_view_employee_skill_form" model="ir.ui.view">-->
-        <!--<field name="name">hr.skills.extended.inherits.view.empoloyee.skill.form</field>-->
-        <!--<field name="model">hr.employee</field>-->
-        <!--<field name="inherit_id" ref="hr_skill.view_employee_skill_form"/>-->
-        <!--<field name="arch" type="xml">-->
-            <!--<field name="skill_ids" position="after">-->
-                <!--<field name='hr_employee_skill_data_ids'/>-->
-            <!--</field>-->
-            <!--<field name="skill_ids" position="attributes">-->
-                <!--<attribute name='readonly'>True</attribute>-->
-            <!--</field>-->
-        <!--</field>-->
-    <!--</record>-->
-
     </data>
 </openerp>
