--- a/views/inherited_hr_view_hr_job_form.xml
+++ b/views/inherited_hr_view_hr_job_form.xml
@@ -14,6 +14,8 @@
 		 <field name='salesperson_id'/>
 		 <field name='for_who'/>
 		 <field name='role_ids' widget='many2many_tags'/>
+		 <field name='project_id'/>
+		 <field name='lead_id'/>
 		</xpath>
 		<xpath expr="//group[@name='employee_data']" position="after">
 	         <group col='6' colspan='2'>
