--- a/views/inh_base_view_partner_tree.xml
+++ b/views/inh_base_view_partner_tree.xml
@@ -7,8 +7,7 @@
             <field name="inherit_id" ref="base.view_partner_tree"/>
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='email']" position="after">
-                                 <field name="application_ids"/>
-                                 <!--<field name="application_ids" widget='many2many_tags'/>-->
+                                 <field name="application_ids" widget='many2many_tags'/>
                                     <!--<tree editable="bottom">-->
                                         <!--<field name='name'/>-->
                                     <!--</tree>-->
