--- a/views/inherited_hr_view_hr_job_form.xml
+++ b/views/inherited_hr_view_hr_job_form.xml
@@ -6,6 +6,16 @@
             <field name="model">hr.job</field>
             <field name="inherit_id" ref="hr.view_hr_job_form"/>
             <field name="arch" type="xml">
+		<xpath expr="//group[@name='employee_data']" position='attributes'>
+		 <attribute name='col'>4</attribute>
+		 <attribute name='colspan'>2</attribute>
+		</xpath>
+		<!--<xpath expr="//group[@name='employee_data']" position='before'>-->
+		 <!--<group name='salary_from_till' col='4' colspan='2'>-->
+		  <!--<field name='salary_from'/>-->
+		  <!--<field name='salary_till'/>-->
+		 <!--</group>-->
+		<!--</xpath>-->
 	        <field name="description" position="replace"/>
 	        <field name="requirements" position="replace"/>
 	        <label for="description" position="replace"/>
@@ -18,6 +28,12 @@
 		 <field name='lead_id'/>
 		</xpath>
 		<xpath expr="//group[@name='employee_data']" position="after">
+		 <group name='salary_from_till' col='6' colspan='2'>
+		  <div><h3>Salary Offered</h3></div>
+		  <field name='salary_from'/>
+		  <field name='salary_till'/>
+		 </group>
+		 <div class="oe_title"><h3>Common data</h3></div>
 	         <group col='6' colspan='2'>
                    <field name="start_date" attrs="{'required':True}"/>
                     <field name="time_to_expire"/>
@@ -61,5 +77,11 @@
 	        <!--</field>-->
             </field>
         </record>
+        <!--<record model="ir.ui.view" id="hr_ext_qa_inherits_hr_view_hr_job_form">-->
+            <!--<field name="name">hr.ext.qa.inherits.hr.view.hr.job.form</field>-->
+            <!--<field name="model">hr.job</field>-->
+            <!--<field name="inherit_id" ref="hr.view_hr_job_form"/>-->
+            <!--<field name="arch" type="xml">-->
+        
     </data>
 </openerp>
