--- a/views/inh_project_edit_project.xml
+++ b/views/inh_project_edit_project.xml
@@ -13,12 +13,13 @@
             <field name="model">project.project</field>
             <field name="inherit_id" ref="project.edit_project"/>
             <field name="arch" type="xml">
-             <xpath expr="//div[@name='buttons']" position="inside">
-                <div class="oe_button_box">
+             <!--<xpath expr="//div[@name='buttons']" position="inside">-->
+             <xpath expr="//button[@icon='fa-tasks']" position="after">
+                <!--<div class="oe_button_box">-->
                     <button class="oe_stat_button" icon="fa-file-o" name="%(hr_ext_qa.connected_jobs_act)d" type="action">
                         <field name="job_count" widget="statinfo" string="Jobs"/>
                     </button>
-                </div>
+                <!--</div>-->
              </xpath>
             </field>
         </record>        
