--- a/views/inherited_hr_recruitment_crm_case_form_view_job.xml
+++ b/views/inherited_hr_recruitment_crm_case_form_view_job.xml
@@ -7,6 +7,7 @@
             <field name="inherit_id" ref="hr_recruitment.crm_case_form_view_job"/>
             <field name="arch" type="xml">
                 <field name='availability' position='replace'/>
+                <label string="Day(s)" position='replace'/>
                 <field name='type_id' position='replace'/>
                 <field name='partner_mobile' position='attributes'>
                     <attribute name='string'>Cell Phone</attribute>
