--- a/views/inherited_hr_recruitment_crm_case_form_view_job.xml
+++ b/views/inherited_hr_recruitment_crm_case_form_view_job.xml
@@ -20,6 +20,9 @@
                     <field name='slack'/> 
                     <field name='website'/> 
                     <field name='linkedin'/> 
+                    <field name='part_time'/> 
+                    <field name='is_relocatable'/> 
+                    <field name='remote_work'/> 
                     <!--<field name='current_salary' widget="monetary"/>-->
                 </xpath>
                 <xpath expr="//field[@name='user_id']" position="after">
